--- a/build.gradle
+++ b/build.gradle
@@ -231,8 +231,8 @@ task pmdMain(type: Pmd, overwrite: true) {
     exclude '**/gen/**'
 
     reports {
-        xml.enabled = false
-        html.enabled = true
+        xml.enabled = true
+        html.enabled = false
     }
 }
 
