--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ uploadArchives {
 apply plugin: 'jacoco'
 
 jacoco {
-            toolVersion "0.7.4.201502262128"
+            toolVersion "0.7.5"
         }
 
         jacocoTestReport {
