--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ uploadArchives {
 apply plugin: 'jacoco'
 
 jacoco {
-            toolVersion "0.7.5"
+            toolVersion = "0.8.2"
         }
 
         jacocoTestReport {
