--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,21 @@ tasks.withType(Checkstyle) {
     }
 }
 
+/* Findbugs */
+
+apply plugin: 'findbugs'
+
+findbugs{
+    toolVersion = "3.0.1"
+}
+
+tasks.withType(FindBugs) {
+    ignoreFailures = true
+    reports {
+        xml.enabled true
+        html.enabled false
+    }
+}
 
 task copyDeps(type: Copy) {
   from configurations.runtime
